# swagger_output.json
@@ -5,7 +5,7 @@
     "description": "Documentation for my Express Post API with validation using express-validator",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "myrest.onrender.com",
   "basePath": "/",
   "tags": [
     {
@@ -17,9 +17,7 @@
       "description": "Operations related to comments on blog posts"
     }
   ],
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["https"],
   "paths": {
     "/posts/": {
       "get": {
@@ -145,7 +143,7 @@
         }
       }
     },
-    "/comments/{postId}": {
+    "/comments/post/{postId}": {
       "post": {
         "description": "",
         "parameters": [
@@ -206,7 +204,7 @@
         }
       }
     },
-    "/comments/{commentId}": {
+    "/comments/comment/{commentId}": {
       "get": {
         "description": "",
         "parameters": [
@@ -237,6 +235,24 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "text": {
+                  "type": "string",
+                  "example": "Updated comment text"
+                },
+                "author": {
+                  "type": "string",
+                  "example": "Updated author name"
+                }
+              }
+            }
           }
         ],
         "responses": {
